#15 Auto-adapting to window resize

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 #contents {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
+    border: none;
 }
