--- a/content/books.css
+++ b/content/books.css
@@ -1,12 +1,19 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
 /*    -webkit-column-fill: auto;
     -webkit-column-gap: 40px;
     -moz-column-width: 300px;
     -moz-column-gap: 40px;
     height: 120px;*/
-    -webkit-column-width: 300px;
     -moz-column-fill: auto;
-    padding: 0 20px;
+    -moz-column-gap: 40px;
+    -webkit-column-fill: auto;
+    -webkit-column-gap: 40px;
     text-align: justify;
-    width: auto;
 }
