--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
+    overflow:hidden;
 }
 
 .bookviewer {
@@ -11,9 +12,6 @@ html, body {
     top: 0;
     left: 0;
     border: none;
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
+    overflow: hidden;
+    margin: none;
 }
