#35, #36 followup - putting some content in the top/bottom menus

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ html, body {
     background-color:green;
     position: absolute;
     transition: opacity 1s;
+    text-align: center;
+    color: white;
 }
 
 .top {
