--- a/content/books.css
+++ b/content/books.css
@@ -1,8 +1,8 @@
 html, body {
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 1em);
+    height: calc(100% - 1em);
     margin: 0;
-    padding: 0 !important;
+    padding: .5em !important;
     max-width: none;
 }
 
