--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html, body {
 
 .menu {
     width: 100%;
-    height: 2em;
+    min-height: 2em;
     background-color:green;
     position: absolute;
     transition-property: opacity, color;
