--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html, body {
     min-height: 2em;
     background-color:green;
     position: absolute;
-    transition-property: opacity, color;
+    transition-property: opacity;
     transition-duration: 1s;
     text-align: center;
     color: white;
@@ -55,6 +55,11 @@ html, body {
     bottom: 0;
 }
 
+.fade_inout {
+  transition-property: opacity;
+  transition-duration: 1s;
+}
+
 .hidden {
     opacity: 0;
 }
@@ -68,8 +73,10 @@ html, body {
     height: 0;
 }
 
-#file_picker {
-  width: 100%;
-  background-color: yellow;
-  z-index: 10;
+#welcome {
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    text-align: center;
+    padding-top: 25%;
 }
