--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,17 @@ html, body {
     opacity: 0;
 }
 
+.scrolledleft {
+  transition-property: transform;
+  transition-duration: 1s;
+  transform: translateX(-100%);
+}
+
 #welcome {
     width: 100%;
     height: 100%;
     z-index: 10;
     text-align: center;
     padding-top: 25%;
+    background-color: rgb(95%, 95%, 95%);
 }
