--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html, body {
     margin: 0;
     overflow:hidden;
     background-color: white;
+    font-family: Garamond, Palatino, Palladio;
 }
 
 .bookviewer {
@@ -80,11 +81,39 @@ html, body {
   transform: translateX(-100%);
 }
 
+ul.library_entries {
+  list-style: none;
+  padding:0;
+}
+
+li.library_entry {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0
+  padding-bottom: 1em;
+  padding-top: 1em;
+  vertical-align: middle;
+  border-bottom: inset black 1px;
+  transition: background-color 1s;
+}
+
+.book_title {
+  font-style: italic;
+}
+
+li.library_entry:hover {
+  background-color: white;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
 #welcome {
     width: 100%;
     height: 100%;
     z-index: 10;
     text-align: center;
-    padding-top: 25%;
+    padding-top: 5%;
     background-color: rgb(95%, 95%, 95%);
 }
