--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html, body {
     margin: 0;
     overflow:hidden;
     background-color: white;
-    font-family: Garamond, Palatino, Palladio;
+    font-family: Garamond, Palatino, Palladio, serif;
 }
 
 .bookviewer {
