--- a/content/books-b2g13.css
+++ b/content/books-b2g13.css
@@ -2,7 +2,7 @@
  * Custom CSS file for Firefox OS 1.3, to work around a bug in padding
  * + columns.
  */
-
+/*
 html, body {
     width: 100%;
     height: calc(100% - 1em);
@@ -13,3 +13,4 @@ html, body {
     padding-bottom: .5em !important;
     max-width: none;
 }
+*/
