--- a/content/books.css
+++ b/content/books.css
@@ -14,10 +14,17 @@ body {
     -moz-column-fill: auto;
     -moz-column-gap: 8em;
     -moz-column-count: 1;
+    -moz-column-rule: 1px solid black;
 
     -webkit-column-fill: auto;
-    -webkit-column-gap: 2em;
+    -webkit-column-gap: 8em;
     -webkit-column-count: 1;
+    -webkit-column-rule: 1px solid black;
+
+    column-fill: auto;
+    column-gap: 8em;
+    column-count: 1;
+    column-rule: 1px solid black;
 
     padding-left: 4em !important;
     padding-right: 0 !important;
