--- a/content/books-b2g13.css
+++ b/content/books-b2g13.css
@@ -14,3 +14,8 @@ html, body {
   padding-bottom: .5em !important;
   max-width: none !important;
 }
+
+body > * {
+  padding-left: 1em;
+  padding-right: 1em;
+}
