--- a/content/books.css
+++ b/content/books.css
@@ -3,38 +3,51 @@
  */
 
 html, body {
-    width: calc(100% - 4em);
-    height: calc(100% - 2em);
-    margin: 0;
-    max-width: none;
+  width : 100%;
+  margin: 0;
+  max-width: none;
+}
+
+html {
+  height: 100%;
 }
 
 body {
+  height: calc(100% - 2em);
+  padding-top: 1em;
+  padding-bottom: 1em;
+
 /* Support pages as columns. */
-    -moz-column-fill: auto;
-    -moz-column-gap: 8em;
-    -moz-column-count: 1;
-    -moz-column-rule: 1px solid black;
+  -moz-column-fill: auto;
+  -moz-column-gap: 0;
+  -moz-column-count: 1;
+  -moz-column-rule: 1px solid black;
 
-    -webkit-column-fill: auto;
-    -webkit-column-gap: 8em;
-    -webkit-column-count: 1;
-    -webkit-column-rule: 1px solid black;
+  -webkit-column-fill: auto;
+  -webkit-column-gap: 0;
+  -webkit-column-count: 1;
+  -webkit-column-rule: 1px solid black;
 
-    column-fill: auto;
-    column-gap: 8em;
-    column-count: 1;
-    column-rule: 1px solid black;
+  column-fill: auto;
+  column-gap: 8em;
+  column-count: 1;
+  column-rule: 1px solid black;
 
-    padding-left: 4em !important;
-    padding-right: 0 !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 
 /* Nice justification for the book. */
-    text-align: justify;
-    hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    -ms-hyphens: auto;
+  text-align: justify;
+  hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+}
+
+body > * {
+/* Margins in pages */
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 img {
