--- a/content/books.css
+++ b/content/books.css
@@ -51,6 +51,6 @@ body > * {
 }
 
 img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: calc(100vw - 4em);
+  max-height: calc(100vh - 2em);
 }
