issue #84 : update style.css, add media query

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,12 @@ html, body {
     z-index: 5;
 }
 
-
+@media (min-width: 700px) {
+	.arrow {
+		font-size: 200%;
+	}
+}
+	
 .hidden {
     opacity: 0;
 }
