--- a/css/menu.css
+++ b/css/menu.css
@@ -10,6 +10,54 @@
   color: white;
 }
 
+#info_ini {
+ display:none;
+}
+
+#info_display {
+  color: white;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  text-align: center;
+  opacity:0.8;
+  background-color: green;
+  width:100%;
+  display:block;
+
+  -webkit-transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+    -moz-transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+      -o-transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+        transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+
+  -webkit-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+    -moz-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+      -o-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+        transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750);
+}
+
+#info_none {
+  color: white;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  text-align: center;
+  background-color: green;
+  width:100%;
+  opacity:0;
+  
+    -webkit-transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+    -moz-transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+      -o-transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+        transition: all 700ms cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+
+  -webkit-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+    -moz-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+      -o-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); 
+        transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750);
+
+}
+
 .menu:hover {
   /* Unhide the menu when the mouse hovers on it*/
   opacity: 1;
