--- a/content/books.css
+++ b/content/books.css
@@ -14,8 +14,8 @@ html {
 
 body {
   height: calc(100% - 2em);
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding: 2em !important;
+  padding: 2em !important;
 
 /* Support pages as columns. */
   -moz-column-fill: auto;
