--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,8 @@ a {
   color: inherit;
 }
 #welcome {
+    transition-property: transform;
+    transition-duration: 1s;
     width: 100%;
     height: 100%;
     z-index: 10;
