--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,13 @@ a {
 }
 #welcome {
     position: absolute;
+    transition-property: transform;
+    transition-duration: 1s;
     width: 100%;
+    height: 100%;
+    background-color: rgb(95%, 95%, 95%);
     z-index: 10;
     text-align: center;
     top: 5%;
-    overflow: scroll;
+    overflow: auto;
 }
