--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,6 @@ a {
     background-color: rgb(95%, 95%, 95%);
     z-index: 10;
     text-align: center;
-    top: 5%;
+    padding-top: 5%;
     overflow: auto;
 }
